--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{ page.title }} | Ben's Blog</title>
 
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
 </head>
 
 <body>
@@ -16,6 +16,8 @@
     <main id="main">
         {{ content }}
     </main>
+    
+    <script async src="/assets/js/main.js"></script>
 </body>
 
 </html>
