--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,4 +3,5 @@ layout: default
 ---
 <h1>{{ page.title }}</h1>
 <h4>{{ page.date | date_to_long_string: "ordinal" }}</h4>
+{% include share-btn.html %}
 {{content}}
