--- a/_includes/share-btn.html
+++ b/_includes/share-btn.html
@@ -1,4 +1,6 @@
 <div class="share-post">
     <a href="{{site.url}}{{page.url}}" class="link">{{site.url}}{{page.url}}</a>
+    <input type="text" name="share-post-link-text" id="share-post-link-text" value="{{site.url}}{{page.url}}" class="link">
     <button class="share">Share this Post</button>
+    <span class="feedback"></span>
 </div>
