♿ Add fallback support for share btn

--- a/_includes/share-btn.html
+++ b/_includes/share-btn.html
@@ -1,6 +1,6 @@
 <div class="share-post">
-    <a href="{{site.url}}{{page.url}}" class="link">{{site.url}}{{page.url}}</a>
-    <input type="text" name="share-post-link-text" id="share-post-link-text" value="{{site.url}}{{page.url}}" class="link">
-    <button class="share">Share this Post</button>
+    <a href="{{site.url}}{{page.url}}" class="link visually-hidden">{{site.url}}{{page.url}}</a>
+    <input type="text" name="share-post-link-text" id="share-post-link-text" value="{{site.url}}{{page.url}}" class="link visually-hidden">
+    <button class="share">Copy link to share</button>
     <span class="feedback"></span>
 </div>
