--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,6 +2,10 @@
     color: rgb(56, 56, 56);
 }
 
-div.share-post .link {
-    // display: none;
+.visually-hidden {
+    position: absolute !important;
+    height: 1px; width: 1px;
+    overflow: hidden;
+    clip: rect(1px 1px 1px 1px); // IE6, IE7
+    clip: rect(1px, 1px, 1px, 1px);
 }
