--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <a href="#main">Skip to Content</a>
+    <a href="#main" class="visually-hidden">Skip to Content</a>
     {% include navigation.html %}
     <main id="main">
         {{ content }}
