✨ Add tag list to posts. 🐛 Fix links to font files. 💩 Replace index page with posts page

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -37,6 +37,11 @@ p{
     line-height: 1.4rem;
 }
 
+p.excerpt {
+    font-family: "Source Sans Pro", Helvetica, Arial sans-serif;
+    line-height: 1.4rem;
+}
+
 pre code{
     font-family: 'Courier New', Courier, monospace;
 }
