--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,11 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
-<h4>{{ page.date | date_to_long_string: "ordinal" }}</h4>
+<h4 class="date">{{ page.date | date_to_long_string: "ordinal" }}</h4>
+<ul class="tags">
+    {% for tag in page.tags %}
+        <li><a href="/tags.html#{{tag}}">{{tag | capitalize }}</a></li>
+    {% endfor %}
+</ul>
 {% include share-btn.html %}
 {{content}}
