✨ Add snackbar for feedback msgs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,17 @@
 
 <body>
     <a href="#main" class="visually-hidden">Skip to Content</a>
+    <!-- <div class="a11y visually-hidden">
+        <p class="alert" aria-live="assertive"></p>
+        <p class="feedback" aria-live="polite"></p>
+    </div> -->
+    <div id="alert" aria-live="assertive" hidden>
+        <span class="label">This is an example of a snackbar</span>
+    </div>
+    <div id="snackbar" class="accessibility-feedback visually-hidden" aria-live="polite">
+        <span class="label">This is an example of a snackbar</span>
+        <!-- <span class="cta"></span> -->
+    </div>
     {% include navigation.html %}
     <main id="main">
         {{ content }}
