--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,8 +2,7 @@
 
 html{
     font-size: 1rem;
-    font-family: "Source Sans Pro", Helvetica, Arial sans-serif;
-    
+    font-family: "Source Sans Pro", Helvetica, Arial sans-serif;    
 }
 
 h1{
@@ -53,7 +52,21 @@ pre code{
 .visually-hidden {
     position: absolute !important;
     height: 1px; width: 1px;
+    opacity: 0;
     overflow: hidden;
     clip: rect(1px 1px 1px 1px); // IE6, IE7
     clip: rect(1px, 1px, 1px, 1px);
+}
+
+#snackbar {
+    background-color: #000;
+    bottom: 1rem;
+    box-shadow: #333 1px 1px 5px; 
+    color: #fff;
+    left: 1rem;
+    opacity: 1;
+    padding: 1rem;
+    position: fixed;
+    transition: opacity 280ms;
+    z-index: 20;
 }
