--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 
 <head>
     <meta charset="UTF-8">
@@ -27,6 +27,10 @@
     <main id="main">
         {{ content }}
     </main>
+
+    <footer>
+        <div class="color-block"></div>
+    </footer>
     
     <script async src="/assets/js/main.js"></script>
 </body>
