--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,6 +5,22 @@
 // Layout
 // --------------------------------------------------------
 
+
+main {
+    margin: 0 auto;
+    max-width: 95%;
+
+    @media screen and (min-width:60rem) {
+        max-width: 60rem;
+    }
+}
+
+footer {
+    display: block;
+    height: 4rem;
+    width: 100%;
+}
+
 .visually-hidden {
     position: absolute !important;
     height: 1px; width: 1px;
@@ -24,6 +40,10 @@
     z-index: 20;
 }
 
+button {
+    padding: 1rem;
+}
+
 // --------------------------------------------------------
 // Type setting
 // --------------------------------------------------------
@@ -39,22 +59,22 @@ nav .current-page {
 
 h1{
     font-family: "Junicode", "Palatino", serif;
-    line-height: 2rem;
-    font-size: 2.6rem;
+    line-height: 1.6;
+    font-size: 3rem;
     font-weight: 700;
 }
 
 h2{
     font-family: "Junicode", "Palatino", serif;
-    line-height: 2rem;
-    font-size: 1.8rem;
+    line-height: 2;
+    font-size: 2rem;
     font-weight: 400;
 }
 
 h3{
     font-family: "Source Sans Pro", Helvetica, Arial sans-serif;
-    font-size: 1.5rem;
-    line-height: 1.8rem;
+    font-size: 1.8rem;
+    line-height: 1.6;
 }
 
 a {
@@ -67,13 +87,14 @@ a:hover {
 
 section.intro p{
     font-family: "Junicode", "Palatino", serif;
-    font-size: 1.125rem;    
-    line-height: 2rem;
+    font-size: 1.5rem;
+    line-height: 1.6;
 }
 
 p{
     font-family: "Source Sans Pro", Helvetica, Arial sans-serif;
-    line-height: 1.4rem;
+    font-size: 1.2rem;
+    line-height: 1.8;
 }
 
 a.excerpt, a.excerpt + .cta {
@@ -96,6 +117,10 @@ pre code{
     font-family: 'Courier New', Courier, monospace;
 }
 
+button {
+    font-size: 1.2rem;
+}
+
 // --------------------------------------------------------
 // Color
 // --------------------------------------------------------
@@ -105,8 +130,16 @@ html {
     color: $dark-grey;
 }
 
+footer {
+    background-color: $primary-dark;
+}
+
 nav .current-page {
     color: $secondary-dark;
+}
+
+h4 {
+    color:$shadow-grey;
 }
 
 a {
@@ -136,4 +169,9 @@ a.excerpt:hover {
     box-shadow: $shadow-grey 1px 1px 5px;
     color: $white;
 
+}
+
+button {
+    background-color: $primary-dark;
+    color: $white;
 }
