--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
-<nav>
+<nav aria-label="Navigation">
     <span class="nav-heading">Site Navigation:</span>
     {% for item in site.data.navigation %}
         <a href="{{ item.link }}" {% if page.url == item.link %} class="current-page" aria-disabled="true" {% endif %}>{{ item.name }}</a>
