--- a/_includes/share-btn.html
+++ b/_includes/share-btn.html
@@ -1,4 +1,4 @@
-<div class="share-post">
+<div class="share-post" aria-label="Link to this post">
     <a href="{{site.url}}{{page.url}}" class="link visually-hidden">{{site.url}}{{page.url}}</a>
     <input type="text" name="share-post-link-text" id="share-post-link-text" value="{{site.url}}{{page.url}}" class="link visually-hidden">
     <button class="share">Copy link to this post</button>
