--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,15 @@
 <nav aria-label="Navigation">
-    <span class="nav-heading">Site Navigation:</span>
-    {% for item in site.data.navigation %}
-        <a href="{{ item.link }}" {% if page.url == item.link %} class="current-page" aria-disabled="true" {% endif %}>{{ item.name }}</a>
-    {% endfor %}
+    <!-- <span class="nav-heading">Site Navigation:</span> -->
+    <ul>
+        {% for item in site.data.navigation %}
+            <!-- <li> -->
+                {% if page.url == item.link %}
+                    <a href="{{ item.link }}" class="current-page" aria-label="{{ item.name }}: Current page">{{ item.name }}</a>
+                {% else %}
+                    <a href="{{ item.link }}" >{{ item.name }}</a>
+                {% endif %}
+            <!-- </li> -->
+        {% endfor %}
+    </ul>
+    <div class="bg"></div>
 </nav>
