--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,4 @@
+@import 'breakpoints';
 @import 'fonts';
 @import 'colors';
 
@@ -10,8 +11,48 @@ main {
     margin: 0 auto;
     max-width: 95%;
 
-    @media screen and (min-width:60rem) {
-        max-width: 60rem;
+    @media screen and (min-width: $mobile-max) {
+        max-width: $mobile-max;
+    }
+}
+
+nav {
+    display: block;
+    margin: 0 auto;
+    max-width: 60rem;
+    padding: 0 1rem;
+
+    ul {
+        display: flex;
+        justify-content: space-evenly;
+        max-width: $mobile-max;
+        
+        @media screen and (min-width: $mobile-max) {
+            display: inline-block;
+            justify-content: initial;
+        }
+        a {
+            // border: 1px solid $dark-grey;
+            border-radius: 5px;
+            margin: 0 2px;
+            padding: 1rem;
+            white-space: nowrap;
+        }
+    }
+
+    div {
+        clip-path: polygon(0px 0px, 86% 10%, 99.58% 94.25%, 10px 100%);
+        position: absolute;
+        height: 5rem;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: -50;
+
+        @media screen and (min-width: $mobile-max) {
+            clip-path: polygon(0% 0%, 54.1% 0%, 78.53% 100%, 2% 79.25%);
+        }
+
     }
 }
 
@@ -47,7 +88,7 @@ button {
 div.share-post {
     text-align: center;
 
-    @media screen and (min-width:60rem) {
+    @media screen and (min-width: $mobile-max) {
         text-align: left;
     }
 }
@@ -61,13 +102,22 @@ html{
     font-family: "Source Sans Pro", Helvetica, Arial sans-serif;    
 }
 
-nav .current-page {
-    text-decoration: none;
+nav {
+    a {
+        font-weight: 600;        
+        text-decoration: none;
+    }
+
+    a.current-page {
+        text-decoration: none;
+    }
 }
+
+
 
 h1{
     font-family: "Junicode", "Palatino", serif;
-    line-height: 1.6;
+    line-height: 1.4;
     font-size: 3rem;
     font-weight: 700;
 }
@@ -148,9 +198,34 @@ footer {
     background-color: $primary-dark;
 }
 
-nav .current-page {
-    color: $secondary-dark;
-}
+nav {
+
+    a {
+        background-color: $white;
+        color: $dark-grey;
+    }
+
+    a:hover {
+        background-color: $light-grey;
+        color: $secondary-dark;
+    }
+
+    .current-page {
+        background-color: $light-grey;
+        color: $secondary-dark;
+    }
+
+    .current-page:hover {
+        background-color: $light-grey;
+        color: $dark-grey;
+    }
+
+    div.bg {
+        background-color: $primary-light;
+        background-image: linear-gradient(10deg, $primary-dark, $primary-light);
+    }
+
+} 
 
 h4 {
     color:$shadow-grey;
