--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,8 @@
     <title>{{ page.title }} | Ben's Blog</title>
 
     <link rel="stylesheet" href="/assets/css/styles.css">
+
+    <script async src="/assets/js/modernizr-flex.js"></script>
 </head>
 
 <body>
