--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -20,23 +20,33 @@ nav {
     display: block;
     margin: 0 auto;
     max-width: 60rem;
-    padding: 0 1rem;
+    text-align: center;
+
+    @media screen and (min-width: $mobile-max) {
+        text-align: left;
+    }
 
     ul {
-        display: flex;
-        justify-content: space-evenly;
+        display: block;
+        margin: 2rem auto;
         max-width: $mobile-max;
         
         @media screen and (min-width: $mobile-max) {
             display: inline-block;
             justify-content: initial;
+            margin: 0 1rem;
         }
+
         a {
-            // border: 1px solid $dark-grey;
             border-radius: 5px;
-            margin: 0 2px;
-            padding: 1rem;
+            display: inline-block;
+            margin: 0 1px;
+            padding: 0.4rem;
             white-space: nowrap;
+
+            @media screen and (min-width: $mobile-max) {
+                padding: 1rem;
+            }
         }
     }
 
