💄 Improve visual language of page headings

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -6,16 +6,6 @@
 // Layout
 // --------------------------------------------------------
 
-
-main {
-    margin: 0 auto;
-    max-width: 95%;
-
-    @media screen and (min-width: $mobile-max) {
-        max-width: $mobile-max;
-    }
-}
-
 nav {
     display: block;
     margin: 0 auto;
@@ -66,6 +56,30 @@ nav {
     }
 }
 
+main {
+    margin: 0 auto;
+    max-width: 95%;
+
+    @media screen and (min-width: $mobile-max) {
+        max-width: $mobile-max;
+    }
+}
+
+ul.tags {
+
+    li {
+        margin: 0.5rem 0;
+    }
+}
+
+.post-preview {
+    
+    a.cta {
+        display: block;
+        margin: 1rem 0;
+    }
+}
+
 footer {
     display: block;
     height: 4rem;
@@ -95,6 +109,15 @@ button {
     padding: 1rem;
 }
 
+hr {
+    border-width: 1px;
+    display: block;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+    margin-inline-start: auto;
+    margin-inline-end: auto;    
+}
+
 div.share-post {
     text-align: center;
 
@@ -118,25 +141,37 @@ nav {
         text-decoration: none;
     }
 
-    a.current-page {
+    a:hover {
         text-decoration: none;
     }
+
+    // a.current-page {
+    //     text-decoration: none;
+    // }
 }
-
-
 
 h1{
     font-family: "Junicode", "Palatino", serif;
-    line-height: 1.4;
     font-size: 3rem;
     font-weight: 700;
+    line-height: 1.4;
+    margin: 0;
+    margin-block-start: 1rem;
+    margin-block-end: 0;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+h1.post {
+    font-size: 2rem;
 }
 
 h2{
     font-family: "Junicode", "Palatino", serif;
-    line-height: 2;
     font-size: 2rem;
     font-weight: 400;
+    line-height: 2;
+    text-align: center;
 }
 
 h3{
@@ -145,23 +180,39 @@ h3{
     line-height: 1.6;
 }
 
+h4 {
+    display: inline-block;
+    margin-block-start: 0.75rem;
+    margin-block-end: 0.75rem;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: 600;
+}
+
 a {
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 a:hover {
-    text-decoration: none;
+    text-decoration: underline;
 }
 
 section.intro p{
     font-family: "Junicode", "Palatino", serif;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     line-height: 1.6;
+}
+
+li.post-preview section.intro p{
+    font-family: "Source Sans Pro", Helvetica, Arial sans-serif;
+    font-size: 1.2rem;
+    line-height: 1.8;
+    overflow-wrap: break-word;
 }
 
 p{
     font-family: "Source Sans Pro", Helvetica, Arial sans-serif;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     line-height: 1.8;
     overflow-wrap: break-word;
 }
@@ -175,10 +226,10 @@ a.excerpt, a.excerpt + .cta {
 
 .posts {
     h3 a, a.cta {
-        text-decoration: underline;
+        text-decoration: none;
     }
     h3 a:hover, a.cta:hover {
-        text-decoration: none;
+        text-decoration: underline;
     }
 }
 
@@ -273,4 +324,8 @@ a.excerpt:hover {
 button {
     background-color: $primary-dark;
     color: $white;
+}
+
+hr{
+    border-color: $light-grey;    
 }
