--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,12 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
+<h1 class="post">{{ page.title }}</h1>
 <h4 class="date">{{ page.date | date_to_long_string: "ordinal" }}</h4>
 <ul class="tags" aria-label="Post tags">
     {% for tag in page.tags %}
         <li><a href="/tags.html#{{tag}}">{{tag | capitalize }}</a></li>
     {% endfor %}
 </ul>
-{% include share-btn.html %}
+<!-- {% include share-btn.html %} -->
 {{content}}
