--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
         <div class="color-block"></div>
     </footer>
     
-    <script async src="/assets/js/main.js"></script>
+    <script async src="/assets/js/main.min.js"></script>
 </body>
 
 </html>
