🐛 Fix site.url bug

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{ page.title }} | Ben's Blog</title>
 
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="{{site.url}}/assets/css/styles.css">
 
-    <script async src="/assets/js/modernizr-flex.js"></script>
+    <script async src="{{site.url}}/assets/js/modernizr-flex.js"></script>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
         <div class="color-block"></div>
     </footer>
     
-    <script async src="/assets/js/main.min.js"></script>
+    <script async src="{{site.url}}/assets/js/main.min.js"></script>
 </body>
 
 </html>
