--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <h4 class="date">{{ page.date | date_to_long_string: "ordinal" }}</h4>
 <ul class="tags" aria-label="Post tags">
     {% for tag in page.tags %}
-        <li><a href="/tags.html#{{tag}}">{{tag | capitalize }}</a></li>
+        <li><a href="{{site.url}}/tags.html#{{tag}}">{{tag | capitalize }}</a></li>
     {% endfor %}
 </ul>
 <!-- {% include share-btn.html %} -->
